# aura-agents-mcp

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/agentic_creation_mcp/: main.py
src/aura_agents_management_mcp/: main.py  memory.py
src/aura_agents_mcp/: main.py  memory.py
